--- a/algolia-project/src/index.html
+++ b/algolia-project/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>mugdha</h1>
-    <script src="script.js" type="module"></script>
 </body>
+<script type="module" src="./assets/js/script.js"></script>
+
 </html>
