--- a/algolia-project/src/index.html
+++ b/algolia-project/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>mugdha</h1>
+    <div id="hits"></div>
 </body>
 <script type="module" src="./assets/js/script.js"></script>
 
